k8s_manifests/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: hm-shop
  labels:
    app.kubernetes.io/managed-by: argocd
    project: hm-shop
