k8s_manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hm-shop-ingress
  namespace: hm-shop
  annotations:
    kubernetes.io/ingress.class:                        alb
    alb.ingress.kubernetes.io/scheme:                   internet-facing
    alb.ingress.kubernetes.io/target-type:              ip
    alb.ingress.kubernetes.io/listen-ports:             '[{"HTTP":80}]'
    alb.ingress.kubernetes.io/load-balancer-name:       hm-shop-alb
    alb.ingress.kubernetes.io/healthcheck-path:         /api/health
    alb.ingress.kubernetes.io/healthcheck-interval-seconds: "30"
    alb.ingress.kubernetes.io/healthcheck-timeout-seconds:  "5"
    alb.ingress.kubernetes.io/success-codes:            "200"
    alb.ingress.kubernetes.io/load-balancer-attributes: idle_timeout.timeout_seconds=60
spec:
  ingressClassName: alb
  rules:
    - http:
        paths:
          - path:     /api
            pathType: Prefix
            backend:
              service:
                name: backend-service
                port:
                  number: 5000
          - path:     /metrics
            pathType: Prefix
            backend:
              service:
                name: backend-service
                port:
                  number: 5000
          - path:     /
            pathType: Prefix
            backend:
              service:
                name: frontend-service
                port:
                  number: 80
